--- a/AutoRest/Generators/CSharp/Azure.CSharp.Tests/app.config
+++ b/AutoRest/Generators/CSharp/Azure.CSharp.Tests/app.config
@@ -6,9 +6,13 @@
         <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-4.5.0.0" newVersion="4.5.0.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.Rest.ClientRuntime" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.0.0.0" newVersion="1.0.0.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <appSettings>
-    <add key="xunit.methodDisplay" value="method"/>
+    <add key="xunit.methodDisplay" value="method" />
   </appSettings>
 </configuration>
