--- a/ClientRuntimes/CSharp/ClientRuntime/Microsoft.Rest.ClientRuntime.nuspec
+++ b/ClientRuntimes/CSharp/ClientRuntime/Microsoft.Rest.ClientRuntime.nuspec
@@ -58,14 +58,14 @@
   <files>
     <file src="ClientRuntime\**\*.cs" target="src\Common" />
     <file src="ClientRuntime\Properties\*.resx" target="src\Common\Properties" />
-    <file src="..\..\binaries\portable\Microsoft.Rest.ClientRuntime.dll" target="lib\portable-net403+win8+wpa81" />
-    <file src="..\..\binaries\portable\Microsoft.Rest.ClientRuntime.pdb" target="lib\portable-net403+win8+wpa81" />
-    <file src="..\..\binaries\portable\Microsoft.Rest.ClientRuntime.xml" target="lib\portable-net403+win8+wpa81" />
-    <file src="..\..\binaries\net40\Microsoft.Rest.ClientRuntime.dll" target="lib\net40" />
-    <file src="..\..\binaries\net40\Microsoft.Rest.ClientRuntime.pdb" target="lib\net40" />
-    <file src="..\..\binaries\net40\Microsoft.Rest.ClientRuntime.xml" target="lib\net40" />
-    <file src="..\..\binaries\net45\Microsoft.Rest.ClientRuntime.dll" target="lib\net45" />
-    <file src="..\..\binaries\net45\Microsoft.Rest.ClientRuntime.pdb" target="lib\net45" />
-    <file src="..\..\binaries\net45\Microsoft.Rest.ClientRuntime.xml" target="lib\net45" />
+    <file src="..\..\binaries\Portable-Release\Microsoft.Rest.ClientRuntime.dll" target="lib\portable-net403+win8+wpa81" />
+    <file src="..\..\binaries\Portable-Release\Microsoft.Rest.ClientRuntime.pdb" target="lib\portable-net403+win8+wpa81" />
+    <file src="..\..\binaries\Portable-Release\Microsoft.Rest.ClientRuntime.xml" target="lib\portable-net403+win8+wpa81" />
+    <file src="..\..\binaries\Net40-Release\Microsoft.Rest.ClientRuntime.dll" target="lib\net40" />
+    <file src="..\..\binaries\Net40-Release\Microsoft.Rest.ClientRuntime.pdb" target="lib\net40" />
+    <file src="..\..\binaries\Net40-Release\Microsoft.Rest.ClientRuntime.xml" target="lib\net40" />
+    <file src="..\..\binaries\Net45-Release\Microsoft.Rest.ClientRuntime.dll" target="lib\net45" />
+    <file src="..\..\binaries\Net45-Release\Microsoft.Rest.ClientRuntime.pdb" target="lib\net45" />
+    <file src="..\..\binaries\Net45-Release\Microsoft.Rest.ClientRuntime.xml" target="lib\net45" />
   </files>
 </package>
