Renamed AutoRest.Cli to AutoRest

--- a/AutoRest/Generators/Azure.Common/Azure.Common.Tests/AutoRest.Generator.Azure.Common.Tests.csproj
+++ b/AutoRest/Generators/Azure.Common/Azure.Common.Tests/AutoRest.Generator.Azure.Common.Tests.csproj
@@ -20,7 +20,7 @@
   <Import Project="$(SolutionDir)\Tools\AutoRest.Settings.targets" />
   <ItemGroup>
     <Compile Include="SampleAzureCodeGenerator.cs" />
-    <None Include="$(SolutionDir)\AutoRest\AutoRest.Cli\AutoRest.json">
+    <None Include="$(SolutionDir)\AutoRest\AutoRest\AutoRest.json">
       <Link>AutoRest.json</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
