--- a/AutoRest/AutoRest.Core/AutoRest.nuspec
+++ b/AutoRest/AutoRest.Core/AutoRest.nuspec
@@ -16,11 +16,11 @@
     <tags>Microsoft AutoRest</tags>
   </metadata>
   <files>
-    <file src="..\binaries\Net45-*\AutoRest.Core.*" target="lib\portable-net45+sl50+wp80+win" />
-    <file src="..\binaries\Net45-*\AutoRest.exe" target="lib\portable-net45+sl50+wp80+win" />
-    <file src="..\binaries\Net45-*\AutoRest.json" target="lib\portable-net45+sl50+wp80+win" />
-    <file src="..\binaries\Net45-*\AutoRest.Generator.CSharp.*" target="lib\portable-net45+sl50+wp80+win" />
-    <file src="..\binaries\Net45-*\AutoRest.Modeler.Swagger.*" target="lib\portable-net45+sl50+wp80+win" />    
-    <file src="..\binaries\Net45-*\Newtonsoft.Json.*" target="lib\portable-net45+sl50+wp80+win" />
+    <file src="..\binaries\net45\AutoRest.Core.*" target="lib\portable-net45+sl50+wp80+win" />
+    <file src="..\binaries\net45\AutoRest.exe" target="lib\portable-net45+sl50+wp80+win" />
+    <file src="..\binaries\net45\AutoRest.json" target="lib\portable-net45+sl50+wp80+win" />
+    <file src="..\binaries\net45\AutoRest.Generator.CSharp.*" target="lib\portable-net45+sl50+wp80+win" />
+    <file src="..\binaries\net45\AutoRest.Modeler.Swagger.*" target="lib\portable-net45+sl50+wp80+win" />    
+    <file src="..\binaries\net45\Newtonsoft.Json.*" target="lib\portable-net45+sl50+wp80+win" />
   </files>
 </package>
