--- a/ClientRuntimes/CSharp/ClientRuntime.Azure/Microsoft.Rest.ClientRuntime.Azure.nuspec
+++ b/ClientRuntimes/CSharp/ClientRuntime.Azure/Microsoft.Rest.ClientRuntime.Azure.nuspec
@@ -41,14 +41,14 @@ Supported Portable Library Platforms:
   <files>
     <file src="ClientRuntime.Azure\**\*.cs" target="src\Common" />
     <file src="ClientRuntime.Azure\Properties\*.resx" target="src\Common\Properties" />
-    <file src="..\..\binaries\Portable-Release\Microsoft.Rest.ClientRuntime.Azure.dll" target="lib\portable-net403+win+wpa81" />
-    <file src="..\..\binaries\Portable-Release\Microsoft.Rest.ClientRuntime.Azure.pdb" target="lib\portable-net403+win+wpa81" />
-    <file src="..\..\binaries\Portable-Release\Microsoft.Rest.ClientRuntime.Azure.xml" target="lib\portable-net403+win+wpa81" />
-    <file src="..\..\binaries\Net45-Release\Microsoft.Rest.ClientRuntime.Azure.dll" target="lib\net45" />
-    <file src="..\..\binaries\Net45-Release\Microsoft.Rest.ClientRuntime.Azure.pdb" target="lib\net45" />
-    <file src="..\..\binaries\Net45-Release\Microsoft.Rest.ClientRuntime.Azure.xml" target="lib\net45" />
-    <file src="..\..\binaries\Net40-Release\Microsoft.Rest.ClientRuntime.Azure.dll" target="lib\net40" />
-    <file src="..\..\binaries\Net40-Release\Microsoft.Rest.ClientRuntime.Azure.pdb" target="lib\net40" />
-    <file src="..\..\binaries\Net40-Release\Microsoft.Rest.ClientRuntime.Azure.xml" target="lib\net40" />
+    <file src="..\..\binaries\portable\Microsoft.Rest.ClientRuntime.Azure.dll" target="lib\portable-net403+win+wpa81" />
+    <file src="..\..\binaries\portable\Microsoft.Rest.ClientRuntime.Azure.pdb" target="lib\portable-net403+win+wpa81" />
+    <file src="..\..\binaries\portable\Microsoft.Rest.ClientRuntime.Azure.xml" target="lib\portable-net403+win+wpa81" />
+    <file src="..\..\binaries\net45\Microsoft.Rest.ClientRuntime.Azure.dll" target="lib\net45" />
+    <file src="..\..\binaries\net45\Microsoft.Rest.ClientRuntime.Azure.pdb" target="lib\net45" />
+    <file src="..\..\binaries\net45\Microsoft.Rest.ClientRuntime.Azure.xml" target="lib\net45" />
+    <file src="..\..\binaries\net40\Microsoft.Rest.ClientRuntime.Azure.dll" target="lib\net40" />
+    <file src="..\..\binaries\net40\Microsoft.Rest.ClientRuntime.Azure.pdb" target="lib\net40" />
+    <file src="..\..\binaries\net40\Microsoft.Rest.ClientRuntime.Azure.xml" target="lib\net40" />
   </files>
 </package>
