--- a/ClientRuntimes/CSharp/ClientRuntime.Log4Net/Microsoft.Rest.ClientRuntime.Log4Net.nuspec
+++ b/ClientRuntimes/CSharp/ClientRuntime.Log4Net/Microsoft.Rest.ClientRuntime.Log4Net.nuspec
@@ -29,11 +29,11 @@
   </metadata>
   <files>
     <file src="ClientRuntime.Log4Net\**\*.cs" target="src" />
-    <file src="..\..\binaries\Net40-Release\Microsoft.Rest.ClientRuntime.Log4Net.dll" target="lib\net40" />
-    <file src="..\..\binaries\Net40-Release\Microsoft.Rest.ClientRuntime.Log4Net.pdb" target="lib\net40" />
-    <file src="..\..\binaries\Net40-Release\Microsoft.Rest.ClientRuntime.Log4Net.xml" target="lib\net40" />
-    <file src="..\..\binaries\Net45-Release\Microsoft.Rest.ClientRuntime.Log4Net.dll" target="lib\net45" />
-    <file src="..\..\binaries\Net45-Release\Microsoft.Rest.ClientRuntime.Log4Net.pdb" target="lib\net45" />
-    <file src="..\..\binaries\Net45-Release\Microsoft.Rest.ClientRuntime.Log4Net.xml" target="lib\net45" />
+    <file src="..\..\binaries\net40\Microsoft.Rest.ClientRuntime.Log4Net.dll" target="lib\net40" />
+    <file src="..\..\binaries\net40\Microsoft.Rest.ClientRuntime.Log4Net.pdb" target="lib\net40" />
+    <file src="..\..\binaries\net40\Microsoft.Rest.ClientRuntime.Log4Net.xml" target="lib\net40" />
+    <file src="..\..\binaries\net45\Microsoft.Rest.ClientRuntime.Log4Net.dll" target="lib\net45" />
+    <file src="..\..\binaries\net45\Microsoft.Rest.ClientRuntime.Log4Net.pdb" target="lib\net45" />
+    <file src="..\..\binaries\net45\Microsoft.Rest.ClientRuntime.Log4Net.xml" target="lib\net45" />
   </files>
 </package>
