--- a/tools/AutoRest.Settings.targets
+++ b/tools/AutoRest.Settings.targets
@@ -23,17 +23,16 @@
   Shared Project properties
   -->
   <PropertyGroup>
-    <OutputPath Condition=" '$(AutoRestTest)' == 'true' ">bin\$(Configuration)\</OutputPath>
-    <BinariesFolderForConfiguration>$(CommonRoot)\binaries\$(Configuration)\</BinariesFolderForConfiguration>
-    <OutputPath Condition=" '$(AutoRestTest)' != 'true' and '$(CodeSign)' != 'true' ">$(BinariesFolderForConfiguration)</OutputPath>
-    <OutputPath Condition=" '$(AutoRestTest)' != 'true' and '$(CodeSign)' == 'true' ">$(BinariesFolderForConfiguration)\unsigned\</OutputPath>
-    <DocumentationFile Condition="'$(AutoRestTest)' != 'true'" >$(OutputPath)\$(AssemblyName).xml</DocumentationFile>
+    <OutputPath>bin\$(Configuration)\</OutputPath>
+    <DocumentationFile>bin\$(Configuration)\$(AssemblyName).xml</DocumentationFile>
+    <AdditionalBinariesFolder>$(LibraryFxTarget)\</AdditionalBinariesFolder>
     <WarnOnMissingDocument Condition="'$(WarnOnMissingDocument)' == ''">false</WarnOnMissingDocument>
     <!-- Turn off XML documentation warnings. -->
     <NoWarn Condition="'$(WarnOnMissingDocument)' == 'false'">1591</NoWarn>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <CodeAnalysisRuleSet Condition="'$(CodeAnalysisRuleSet)' == ''">AllRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
+  
   <PropertyGroup>
     <SignAssembly>$(CodeSign)</SignAssembly>
     <DelaySign>$(CodeSign)</DelaySign>
@@ -80,6 +79,39 @@
     <Error Text="The current build type has not been defined." Condition=" '$(LibraryFxTarget)' == '' " />
     <Message Text="Current build type:            $(LibraryFxTarget)" />
     <Message Text="TargetFrameworkVersion: $(TargetFrameworkVersion) TargetFrameworkProfile: $(TargetFrameworkProfile)" />
+  </Target>
+
+  <Target Name="CopySdkBinaries" AfterTargets="AfterBuild">
+    <PropertyGroup>
+      <!--Folder where nuget.exe gets xml and pdb files to create the package-->
+      <_BinariesDirectory>$(CommonRoot)\binaries\$(LibraryFxTarget)</_BinariesDirectory>
+      <!--
+      Folder where nuget.exe gets dll. If under codesign, we copy to 'unsigned' first, 
+      codesign task will sign it and copy back to  _BinariesDirectory. 
+      (Check out the SignBinariesForAFxTarget in build.proj)
+      -->
+      <_CodeSignDirectory Condition="'$(CodeSign)' != 'true'">$(_BinariesDirectory)</_CodeSignDirectory>
+      <_CodeSignDirectory Condition="'$(CodeSign)' == 'true'">$(_BinariesDirectory)\unsigned\</_CodeSignDirectory>
+    </PropertyGroup>
+    <Message Text="Copying assembly files to $(_CodeSignDirectory)." />
+    <Message Text="Copying symbols and documentation files to $(_BinariesDirectory)." />
+    <MakeDir Directories="$(_CodeSignDirectory)" Condition="!Exists($(_CodeSignDirectory))" />
+    <ItemGroup>
+      <_AutoRestBinaries Include="$(ProjectDir)$(OutputPath)*.*"/>
+    </ItemGroup>
+
+    <Copy SourceFiles="$(ProjectDir)$(OutputPath)$(AssemblyName).xml;$(ProjectDir)$(OutputPath)$(AssemblyName).pdb"
+          DestinationFolder="$(_BinariesDirectory)"/>
+    <Copy SourceFiles="$(ProjectDir)$(OutputPath)$(AssemblyName).dll" 
+          Condition="Exists('$(ProjectDir)$(OutputPath)$(AssemblyName).dll')"
+          DestinationFolder="$(_CodeSignDirectory)"/>
+    <!-- AutoRest.exe specific files -->
+    <Copy SourceFiles="@(_AutoRestBinaries)" 
+          Condition=" $(AssemblyName) == 'AutoRest' "
+          DestinationFolder="$(_BinariesDirectory)"/>
+    <Copy SourceFiles="$(ProjectDir)$(OutputPath)$(AssemblyName).exe" 
+          Condition=" $(AssemblyName) == 'AutoRest' "
+          DestinationFolder="$(_CodeSignDirectory)"/>
   </Target>
 
   <Target Name="SyncPackageVersions" BeforeTargets="BeforeBuild">
