--- a/AutoRest/Generators/CSharp/CSharp/AutoRest.Generator.CSharp.csproj
+++ b/AutoRest/Generators/CSharp/CSharp/AutoRest.Generator.CSharp.csproj
@@ -22,8 +22,10 @@
       <Link>Properties\AssemblyVersionInfo.cs</Link>
     </Compile>
     <Compile Include="CSharpCodeGenerator.cs" />
-    <Compile Include="CSharpCodeNamingFramework.cs" />
+    <Compile Include="CSharpCodeNamer.cs" />
+    <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="IScopeProvider.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -61,6 +63,11 @@
       <Project>{c876085f-9dc3-41f0-b7b4-17022cd84684}</Project>
       <Name>AutoRest.Core</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <CodeAnalysisDictionary Include="..\..\..\..\tools\CustomDictionary.xml">
+      <Link>CustomDictionary.xml</Link>
+    </CodeAnalysisDictionary>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
