--- a/AutoRest/Generators/CSharp/Azure.CSharp/AutoRest.Generator.Azure.CSharp.csproj
+++ b/AutoRest/Generators/CSharp/Azure.CSharp/AutoRest.Generator.Azure.CSharp.csproj
@@ -22,7 +22,9 @@
       <Link>Properties\AssemblyVersionInfo.cs</Link>
     </Compile>
     <Compile Include="AzureCSharpCodeGenerator.cs" />
-    <Compile Include="AzureCSharpCodeNamingFramework.cs" />
+    <Compile Include="AzureCSharpCodeNamer.cs" />
+    <Compile Include="GlobalSuppressions.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -62,6 +64,11 @@
     <None Include="Templates\AzureMethodTemplate.cshtml" />
     <None Include="Templates\AzureServiceClientTemplate.cshtml" />
     <None Include="Templates\AzureMethodGroupTemplate.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <CodeAnalysisDictionary Include="..\..\..\..\tools\CustomDictionary.xml">
+      <Link>CustomDictionary.xml</Link>
+    </CodeAnalysisDictionary>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
