--- a/AutoRest/Generators/NodeJS/Azure.NodeJS/AutoRest.Generator.Azure.NodeJS.csproj
+++ b/AutoRest/Generators/NodeJS/Azure.NodeJS/AutoRest.Generator.Azure.NodeJS.csproj
@@ -22,7 +22,9 @@
       <Link>Properties\AssemblyVersionInfo.cs</Link>
     </Compile>
     <Compile Include="AzureNodeJSCodeGenerator.cs" />
-    <Compile Include="AzureNodeJSCodeNamingFramework.cs" />
+    <Compile Include="AzureNodeJsCodeNamer.cs" />
+    <Compile Include="GlobalSuppressions.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -61,6 +63,11 @@
     <None Include="Templates\AzureMethodGroupTemplate.cshtml" />
     <None Include="Templates\AzureServiceClientTemplate.cshtml" />
     <None Include="Templates\AzureModelIndexTemplate.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <CodeAnalysisDictionary Include="..\..\..\..\tools\CustomDictionary.xml">
+      <Link>CustomDictionary.xml</Link>
+    </CodeAnalysisDictionary>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
