--- a/tools/NuGet.targets
+++ b/tools/NuGet.targets
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
 
-  <Import Project="$(LibrarySourceFolder)\**\*.nuget.proj"/>
+  <Import Project="$(LibrarySourceFolder)\ClientRuntimes\**\*.nuget.proj"
+          Condition=" '$(Scope)' == 'all' or '$(Scope)' == 'ClientRuntime'"/>
+
+  <Import Project="$(LibrarySourceFolder)\AutoRest\**\*.nuget.proj"
+          Condition=" '$(Scope)' == 'all' or '$(Scope)' == 'CodeGenerator'"/>
 
   <PropertyGroup>
     <NuGetVerbosity>normal</NuGetVerbosity>
