Updating FxCop rules and fixing tests

--- a/AutoRest/Generators/Ruby/Ruby.Tests/AutoRest.Generator.Ruby.Tests.csproj
+++ b/AutoRest/Generators/Ruby/Ruby.Tests/AutoRest.Generator.Ruby.Tests.csproj
@@ -16,6 +16,9 @@
     <AutoRestTest>true</AutoRestTest>
     <NuGetPackageImportStamp>e29c3c7d</NuGetPackageImportStamp>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)' == 'Net45-Debug'">
+    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+  </PropertyGroup>
   <Import Project="$(SolutionDir)\Tools\AutoRest.Settings.targets" />
   <ItemGroup>
     <Reference Include="System" />
