--- a/AutoRest/Generators/Ruby/Ruby.Tests/AutoRest.Generator.Ruby.Tests.csproj
+++ b/AutoRest/Generators/Ruby/Ruby.Tests/AutoRest.Generator.Ruby.Tests.csproj
@@ -34,6 +34,8 @@
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
     <Compile Include="AcceptanceTests.cs" />
+    <Compile Include="AcceptanceTestsBase.cs" />
+    <Compile Include="ProcessSync.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\AutoRest.Core\AutoRest.Core.csproj">
