--- a/AutoRest/Generators/Ruby/Ruby/AutoRest.Generator.Ruby.csproj
+++ b/AutoRest/Generators/Ruby/Ruby/AutoRest.Generator.Ruby.csproj
@@ -29,8 +29,10 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Include="RubyCodeNamingFramework.cs" />
     <Compile Include="ScopeProvider.cs" />
-    <Compile Include="TemplateModels\OperationsTemplateModel.cs" />
+    <Compile Include="TemplateModels\EnumTemplateModel.cs" />
+    <Compile Include="TemplateModels\MethodGroupTemplateModel.cs" />
     <Compile Include="TemplateModels\RequirementsTemplateModel.cs" />
     <Compile Include="TemplateModels\ServiceClientTemplateModel.cs" />
     <Compile Include="TemplateModels\MethodTemplateModel.cs" />
@@ -38,12 +40,14 @@
     <Compile Include="TemplateModels\ParameterTemplateModel.cs" />
     <Compile Include="TemplateModels\PropertyTemplateModel.cs" />
     <Compile Include="TemplateModels\ModelTemplateModel.cs" />
+    <Compile Include="Templates\EnumTemplate.cs" />
+    <Compile Include="Templates\MethodGroupTemplate.cs" />
     <Compile Include="Templates\MethodTemplate.cs" />
     <Compile Include="Templates\ModelTemplate.cs" />
-    <Compile Include="Templates\OperationsTemplate.cs" />
     <Compile Include="Templates\RequirementsTemplate.cs" />
     <Compile Include="Templates\ServiceClientTemplate.cs" />
-    <None Include="Templates\OperationsTemplate.cshtml" />
+    <None Include="Templates\EnumTemplate.cshtml" />
+    <None Include="Templates\MethodGroupTemplate.cshtml" />
     <None Include="Templates\RequirementsTemplate.cshtml" />
     <None Include="Templates\ServiceClientTemplate.cshtml" />
     <None Include="Templates\MethodTemplate.cshtml" />
