--- a/ClientRuntimes/CSharp/ClientRuntime/ClientRuntime.csproj
+++ b/ClientRuntimes/CSharp/ClientRuntime/ClientRuntime.csproj
@@ -26,6 +26,7 @@
     <Compile Include="Serialization\PolymorphicSerializeJsonConverter.cs" />
     <Compile Include="Serialization\ReadOnlyJsonContractResolver.cs" />
     <Compile Include="TokenCredentials.cs" />
+    <Compile Include="TransientFaultHandling\TransientErrorIgnoreStrategy.cs" />
     <Compile Include="TransientFaultHandling\RetryCondition.cs" />
     <Compile Include="TypeConversion.cs" />
     <Compile Include="HttpOperationResponse.cs" />
