--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-## Ignore user-specific files, temporary files, build results, etc. 
+## Ignore user-specific files, temporary files, build results, etc.
 
 # User-specific files
 *.suo
@@ -140,7 +140,7 @@ target
 *.pem
 *.jks
 
-# Backup & report files from converting a project to a new version of VS. 
+# Backup & report files from converting a project to a new version of VS.
 _UpgradeReport_Files/
 Backup*/
 UpgradeLog*.XML
@@ -155,3 +155,6 @@ packages
 # Windows #
 Thumbs.db
 
+# Mono
+*dll.mdb
+*exe.mdb
