--- a/ClientRuntimes/CSharp/ClientRuntime.Azure.Tests/ClientRuntime.Azure.Tests.csproj
+++ b/ClientRuntimes/CSharp/ClientRuntime.Azure.Tests/ClientRuntime.Azure.Tests.csproj
@@ -19,7 +19,7 @@
     <AutoRestTest>true</AutoRestTest>
     <NuGetPackageImportStamp>836aa096</NuGetPackageImportStamp>
   </PropertyGroup>
-  <Import Project="$(SolutionDir)\tools\AutoRest.Settings.targets" />
+  <Import Project="$(SolutionDir)\Tools\AutoRest.Settings.targets" />
   <ItemGroup>
     <Compile Include="AzureEnvironmentTest.cs" />
     <Compile Include="Fakes\FakeServiceClientWithCredentials.cs" />
