--- a/ClientRuntimes/CSharp/ClientRuntime.Log4Net/ClientRuntime.Log4Net.csproj
+++ b/ClientRuntimes/CSharp/ClientRuntime.Log4Net/ClientRuntime.Log4Net.csproj
@@ -17,7 +17,7 @@
   <PropertyGroup Condition="'$(Configuration)' == 'Net40-Debug'">
     <DocumentationFile>bin\Net40-Debug\Microsoft.Rest.ClientRuntime.Log4Net.xml</DocumentationFile>
   </PropertyGroup>
-  <Import Project="$(SolutionDir)\tools\AutoRest.Settings.targets" />
+  <Import Project="$(SolutionDir)\Tools\AutoRest.Settings.targets" />
   <ItemGroup>
     <Compile Include="Log4NetTracingInterceptor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -40,7 +40,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <CodeAnalysisDictionary Include="..\..\..\tools\CustomDictionary.xml">
+    <CodeAnalysisDictionary Include="..\..\..\Tools\CustomDictionary.xml">
       <Link>CustomDictionary.xml</Link>
     </CodeAnalysisDictionary>
   </ItemGroup>
