--- a/ClientRuntimes/CSharp/ClientRuntime.Tests/ClientRuntime.Tests.csproj
+++ b/ClientRuntimes/CSharp/ClientRuntime.Tests/ClientRuntime.Tests.csproj
@@ -19,7 +19,7 @@
     <RestorePackages>true</RestorePackages>
     <NuGetPackageImportStamp>464ffb68</NuGetPackageImportStamp>
   </PropertyGroup>
-  <Import Project="$(SolutionDir)\tools\AutoRest.Settings.targets" />
+  <Import Project="$(SolutionDir)\Tools\AutoRest.Settings.targets" />
   <ItemGroup>
     <Compile Include="Fakes\MirrorDelegatingHandler.cs" />
     <Compile Include="Fakes\MirrorMessageHandler.cs" />
